# EVE-3rd-party-dev-tools

./: .gitignore  LICENSE  LICENSE.md  README.md
.github/workflows/: generate-icons.yml
.run/: IconGenerator.run.xml
Assorted Documentation/: glossary.md
Assorted Documentation/drafts/: README.txt  sde_map.md  wip-known issues.md
DataLib/: Cargo.toml
DataLib/export/: holds.json
DataLib/src/: esi.rs  hardcoded.rs  ids.rs  item_list.rs  lib.rs  main.rs  numbers.rs  test.rs  units.rs
DataLib/src/sde/: ccp_sde.rs  load.rs  mod.rs  update.rs
DataLib/src/sde/sqlite/: invFlags.sql  mod.rs  ramActivities.sql
DataLib/src/types/: ids.rs  mod.rs  numbers.rs  values.rs
DataLib/src/util/: item_list.rs  mod.rs
Docker/: .dockerignore  icongenerator.Dockerfile
eveicongenerator/: Cargo.toml  README.md
eveicongenerator/docs/: guide.md  webmode.md
eveicongenerator/src/: icons.rs  main.rs  sde.rs
evesharedcache/: Cargo.toml
evesharedcache/src/: cache.rs  fsd.py  fsd.rs  lib.rs
evestaticdata/: Cargo.toml  sde cheatsheet.yaml
evestaticdata-macro/: Cargo.toml  README.md
evestaticdata-macro/src/: lib.rs
evestaticdata/src/: lib.rs  main.rs
evestaticdata/src/sde/: load.rs  mod.rs  update.rs
evestaticdata/src/sde/sqlite/: mod.rs
evestaticdata/src/types/: mod.rs
evestaticdata/src/util/: mod.rs
sdeslash/: Cargo.toml  README
sdeslash/src/: explainer.txt  main.rs
