[package]
name = "evestaticdata"
version = "0.1.0"
edition = "2024"

[features]
default = ["serde", "update", "load_yaml"]
update = ["dep:reqwest"]
load_yaml = ["dep:zip", "serde"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_yaml_ng", "dep:serde_repr", "indexmap/serde"]

[profile.test]
inherits = "release"

[dependencies]
indexmap = { version = "2.8.0" }
# Used for 'update' feature
reqwest = { version = "0.12.15", features = ["blocking"], optional = true }
# Used for SDE parsing
zip = { version = "2.6.1", optional = true }
serde_yaml_ng = {  version = "0.10.0", optional = true }
serde_repr = { version = "0.1.20", optional = true }
saphyr = { git = "https://github.com/saphyr-rs/saphyr.git", optional = true } # TODO: Replace with a crates.io declaration once they update; Current version has a bug with conflicts with EVE Data
# Used for 'serde' feature
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }