[package]
name = "evestaticdata"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/SentientTurtle/EVE-3rd-party-dev-tools"

[features]
default = ["update", "load", "serde"]
update = ["dep:reqwest", "reqwest/json", "dep:serde", "dep:serde_json"]
load = ["dep:zip", "dep:serde"]
serde = ["dep:serde", "dep:serde_repr", "indexmap/serde"]

[profile.test]
inherits = "release"

[dependencies]
indexmap = { version = "2.11.4" }
# Used for 'update' feature
reqwest = { version = "0.12.23", features = ["blocking"], optional = true }
# Used for SDE parsing
zip = { version = "5.1.1", optional = true }
serde_repr = { version = "0.1.20", optional = true }
# Used for 'serde' feature
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }