[package]
name = "evestaticdata"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/SentientTurtle/EVE-3rd-party-dev-tools"

[features]
default = ["sde_load", "sde_update", "export_sqlite", "esi_async", "serde"]
sde_update = ["dep:reqwest", "reqwest/json", "reqwest/blocking", "dep:serde", "dep:serde_json"]
sde_load = ["dep:zip", "dep:serde", "dep:serde_json"]
export_sqlite = ["dep:rusqlite"]
serde = ["dep:serde", "dep:serde_repr", "indexmap/serde"]
esi_async = ["dep:tokio", "dep:reqwest"]

[profile.test]
inherits = "release"

[dependencies]
indexmap = { version = "2.13.0" }
# Used for 'update' feature
reqwest = { version = "0.13.1", optional = true, features = ["native-tls"] }
# Used for SDE parsing
zip = { version = "8.3.0", optional = true }
serde_repr = { version = "0.1.20", optional = true }
# Used for SDE exporting
rusqlite = { version = "0.39.0", optional = true, features = ["bundled"] }
# Used for 'serde' feature
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
tokio = { version = "1.49.0", features = ["net", "time", "rt"], optional = true }