[package]
name = "eveicongenerator"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
evesharedcache = { path = "../evesharedcache" }
reqwest = { version = "0.12.23", features = ["blocking"] }
zip = "5.1.1"
image = "0.25.5"
image-blend = "0.1.7"
clap = "4.5.29"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
chrono = "0.4.39"
md5 = "0.8.0"

# These are required for cross-compilation (windows -> linux), and may be omitted when compiling natively on linux
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = '*', features = ["vendored"] }
[target.'cfg(target_os = "linux")'.build-dependencies]
openssl = { version = '*', features = ["vendored"] }