[package]
name = "eveicongenerator"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/SentientTurtle/EVE-3rd-party-dev-tools"

[dependencies]
evesharedcache = { path = "../evesharedcache" }
evestaticdata = { path = "../evestaticdata" }
reqwest = { version = "0.13.4", features = ["blocking"] }
zip = "8.6.0"
image = "0.25.10"
image-blend = "0.1.7"
clap = "4.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = "0.4.45"
# Intentionally not the RustCrypto one. We don't need all the additional cruft RustCrypto adds.
md5 = "0.8.0"