[package]
name = "evesharedcache"
version = "0.1.0"
edition = "2024"
publish = false

[features]
enable_fsd = []

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
reqwest = { version = "0.12.12", features = ["blocking", "json", "gzip"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }