[package]
name = "evesharedcache"
version = "0.1.0"
edition = "2024"
publish = false

[profile]
test = { opt-level = 3 }

[features]
enable_fsd = []

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
reqwest = { version = "0.13.2", features = ["blocking", "json", "gzip"] }
md-5 = "0.10.6"