[package]
name = "evestaticdata"
version = "1.0.0"
edition = "2024"
publish = false
repository = "https://github.com/SentientTurtle/EVE-3rd-party-dev-tools"

[features]
default = []
sde_update = ["dep:reqwest", "reqwest/json", "reqwest/blocking", "serde"]
sde_load = ["dep:zip", "serde"]
sde_diff = ["sde_load", "dep:json-patch"]
sde_strict = []
export_sqlite = ["dep:rusqlite"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_repr", "indexmap/serde", "uuid/serde"]
esi_async = ["dep:tokio", "dep:reqwest"]
docs_export = ["dep:evestaticdata_macro"]

[profile.test]
inherits = "release"

[dependencies]
# Used in general types for all features
indexmap = { version = "2.13.0" }
uuid = { version = "1.23.2" }
# Used for 'update' feature
reqwest = { version = "0.13.1", optional = true, features = ["native-tls"] }
# Used for SDE parsing
zip = { version = "8.3.0", optional = true }
serde_repr = { version = "0.1.20", optional = true }
# Used for SDE exporting
rusqlite = { version = "0.39.0", optional = true, features = ["bundled"] }
# Used for 'serde' feature
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }

tokio = { version = "1.49.0", features = ["net", "time", "rt"], optional = true }

# Used for 'sde_diff' feature
json-patch = { version = "4.2.0", optional = true }

# Used for 'docs-export' feature
evestaticdata_macro = { path = "../evestaticdata-macro", optional = true }